2011-11-11  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: [Metrics] Editor is committed when scrolling a content box dimension up/down for the first time
        https://bugs.webkit.org/show_bug.cgi?id=72108

        Reviewed by Pavel Feldman.

        * inspector/front-end/MetricsSidebarPane.js:
        (WebInspector.MetricsSidebarPane.prototype._attributesUpdated):

2011-11-11  Alpha Lam  <hclam@chromium.org>

        [chromium] scrolling is broken with compositor thread
        https://bugs.webkit.org/show_bug.cgi?id=72059

        Reviewed by James Robinson.

        No new test. Existing test CCLayerTreeHostImplTest.scrollDeltaRepeatedScrolls checks scroll deltas are applied
        on the right layer.

        * platform/graphics/chromium/cc/CCLayerTreeHostImpl.h:
        (WebCore::CCLayerTreeHostImpl::scrollLayer):
        * platform/graphics/chromium/cc/CCThreadProxy.cpp:
        (WebCore::CCThreadProxy::beginFrameCompleteOnImplThread):
        Instead of calling on the root layer which doesn't have scroll delta applied. Change this to scrollLayer()
        which actually has scroll delta.

2011-11-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99826.
        http://trac.webkit.org/changeset/99826
        https://bugs.webkit.org/show_bug.cgi?id=72109

        "Likely causing test flakiness" (Requested by tonyg-cr on
        #webkit).

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::scheduleArchiveLoad):

2011-11-11  Nikolas Zimmermann  <nzimmermann@rim.com>

        Zooming in SVGs in <object> is flakey
        https://bugs.webkit.org/show_bug.cgi?id=71673

        Reviewed by Zoltan Herczeg.

        It turns out zooming in SVGs in <object> wasn't flakey in Safari at all, only in DRT/Mac. In Safari it failed 100% reproducable.
        Scrollbars would always appear when zooming in a HTML document, containing an embedded SVG by <object>/<embed>/<iframe>, even